--- a/views/room.ejs
+++ b/views/room.ejs
@@ -53,11 +53,11 @@
                   <i class="fas fa-shield-alt"></i>
                   <span>Security</span>
                </div>
-               <div class="main__controls__button">
+               <div onclick="toggleParticipantsPanel()" class="main__controls__button">
                   <i class="fas fa-user-friends"></i>
                   <span>Participants</span>
                </div>
-               <div class="main__controls__button">
+               <div onclick="toggleChatPanel()" class="main__controls__button">
                   <i class="fas fa-comment-alt"></i>
                   <span>Chat</span>
                </div>
@@ -70,17 +70,32 @@
          </div>
       </div>
       <div class="main__right">
-         <div class="main__header">
-            <h6>Chat</h6>
+         <div class="main__panel chat__panel active">
+            <div class="main__header">
+               <h6>Chat</h6>
+            </div>
+            <div class="main__chat_window">
+               <ul class="messages">
+                  
+               </ul>
+            </div>
+            <div class="main__message_container">
+               <input id="chat_message" type="text" placeholder="Type message here...">
+            </div>
          </div>
-         <div class="main__chat_window">
-            <ul class="messages">
-               
-            </ul>
-
-         </div>
-         <div class="main__message_container">
-            <input id="chat_message" type="text" placeholder="Type message here...">
+         <div class="main__panel participants__panel">
+            <div class="main__header">
+               <h6>Participants</h6>
+            </div>
+            <div class="participants__container">
+               <ul class="participants__list">
+                  <!-- Participants will be added here dynamically -->
+               </ul>
+            </div>
+            <div class="add__participant__container">
+               <input id="participant_email" type="email" placeholder="Enter email to invite...">
+               <button id="invite_button" class="invite__button">Invite</button>
+            </div>
          </div>
       </div>
    </div>
